--- a/app base/pubspec.yaml
+++ b/app base/pubspec.yaml
@@ -25,26 +25,20 @@ dependencies:
     sdk: flutter
   firebase_core: "0.7.0"
   firebase_auth: "^0.20.1"
-  firebase_crashlytics: "^0.4.0+1"
-  firebase_storage: "^7.0.0"
-  firebase_messaging: "^8.0.0-dev.15"
-  firebase_remote_config: "^0.8.0-dev.0"
   cloud_firestore: "^0.16.0+1"
-  shared_preferences: "^2.0.5"
-  flutter_svg : "^0.17.4"
-  simple_animations: "^1.3.3"
-  cloud_functions: "^0.9.0"
-  
+  shared_preferences: ^2.0.5
+  flutter_svg : ^0.17.4
+  simple_animations: ^1.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: "^1.0.0"
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,7 +55,31 @@ flutter:
   assets:
     - assets/images/
 
-fonts:
-  - family: Inter
-    fonts:
-      - asset: assets/fonts/Inter-Regular.ttf
+  # An image asset can refer to one or more resolution-specific "variants", see
+  # https://flutter.dev/assets-and-images/#resolution-aware.
+
+  # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/assets-and-images/#from-packages
+
+  # To add custom fonts to your application, add a fonts section here,
+  # in this "flutter" section. Each entry in this list should have a
+  # "family" key with the font family name, and a "fonts" key with a
+  # list giving the asset and other descriptors for the font. For
+  # example:
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
+  #   - family: Trajan Pro
+  #     fonts:
+  #       - asset: fonts/TrajanPro.ttf
+  #       - asset: fonts/TrajanPro_Bold.ttf
+  #         weight: 700
+  #
+  # For details regarding fonts from package dependencies,
+  # see https://flutter.dev/custom-fonts/#from-packages
+
+
+
