--- a/app base/pubspec.yaml
+++ b/app base/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   shared_preferences: ^2.0.5
   flutter_svg : ^0.17.4
   simple_animations: ^1.3.3
+  flutter_phone_direct_caller: ^1.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
