--- a/app base/pubspec.yaml
+++ b/app base/pubspec.yaml
@@ -30,12 +30,14 @@ dependencies:
   flutter_svg : ^0.17.4
   simple_animations: ^1.3.3
   flutter_phone_direct_caller: ^1.0.1
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-
+dependency_overrides:
+  intl: ^0.17.0-nullsafety.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
