--- a/app base/pubspec.yaml
+++ b/app base/pubspec.yaml
@@ -27,9 +27,10 @@ dependencies:
   firebase_auth: "^0.20.1"
   cloud_firestore: "^0.16.0+1"
   shared_preferences: ^2.0.5
-  flutter_svg : ^0.17.4
+  flutter_svg : ^0.22.0
   simple_animations: ^1.3.3
   flutter_phone_direct_caller: ^1.0.1
+  flutter_markdown: ^0.6.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -55,8 +56,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
+    - assets/text/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
+
+      # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
   # For details regarding adding assets from package dependencies, see
@@ -67,10 +71,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  #fonts:
+   # - family: Inter
+    #  fonts:
+     #   - asset: fonts/Inter-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
