--- a/app base/pubspec.yaml
+++ b/app base/pubspec.yaml
@@ -23,19 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: "0.7.0"
-  firebase_auth: "^0.20.1"
-  cloud_firestore: "^0.16.0+1"
-  shared_preferences: ^2.0.5
-  flutter_svg : ^0.22.0
+  firebase_core: ^1.3.0
+  firebase_auth: ^1.4.1
+  cloud_firestore: ^2.2.2
+  shared_preferences: ^2.0.5 
+  flutter_svg : ^0.22.0 
   simple_animations: ^1.3.3
   flutter_phone_direct_caller: ^1.0.1
   flutter_markdown: ^0.6.2
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  survey_kit: ^0.0.10
+  
 
 dev_dependencies:
   flutter_test:
