--- a/app base/pubspec.yaml
+++ b/app base/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   cupertino_icons: ^1.0.0
   survey_kit: ^0.0.10
   curved_navigation_bar: ^1.0.1 #latest version
-  
+  youtube_plyr_iframe: ^2.0.7
+
+
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +59,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/text/
+
 
 
       # An image asset can refer to one or more resolution-specific "variants", see
