add ratingDialog for readings

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   youtube_player_flutter: ^8.0.0
   feedback: ^2.0.0
   flutter_launcher_icons: ^0.9.1
+  rating_dialog: ^2.0.1
 
 dev_dependencies:
   flutter_test:
