--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
   firebase_auth: ^3.0.0
   shared_preferences: ^2.0.6
   cloud_firestore: ^2.4.0
-  flutter_phone_direct_caller: ^2.0.0
   flutter_svg: ^0.22.0
   curved_navigation_bar: ^1.0.1
   flutter_markdown: ^0.6.2
@@ -51,6 +50,8 @@ dependencies:
   firebase_storage: ^10.0.3
   file_picker: ^4.1.1
   path_provider: ^2.0.5
+  intl: ^0.17.0
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
