--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   path_provider: ^2.0.5
   intl: ^0.17.0
   url_launcher: ^6.0.12
+  package_info_plus: ^1.3.0
 
 dev_dependencies:
   flutter_test:
