--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,18 +28,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  simple_animations: ^3.1.1
-  firebase_core: ^1.4.0
-  firebase_auth: ^3.0.0
+  simple_animations: ^4.0.0+2
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.3
   shared_preferences: ^2.0.6
-  cloud_firestore: ^2.4.0
-  flutter_svg: ^0.22.0
+  cloud_firestore: ^4.1.0
+  flutter_svg: ^1.1.6
   curved_navigation_bar: ^1.0.1
   flutter_markdown: ^0.6.2
-  survey_kit: ^0.0.11
+  survey_kit: ^0.1.1
   youtube_player_flutter: ^8.0.0
   feedback: ^2.0.0
-  flutter_launcher_icons: ^0.9.1
+  flutter_launcher_icons: ^0.11.0
   rating_dialog: ^2.0.1
   flutter_firebase_chat_core: ^1.4.2
   flutter_chat_ui: ^1.4.3
@@ -47,7 +47,7 @@ dependencies:
   image_picker: ^0.8.4+2
   mime: ^1.0.0
   open_file: ^3.2.1
-  firebase_storage: ^10.0.3
+  firebase_storage: ^11.0.6
   file_picker: ^4.1.1
   path_provider: ^2.0.5
   intl: ^0.17.0
