--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   intl: ^0.17.0
   url_launcher: ^6.0.12
   package_info_plus: ^1.3.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
