Feito diario livre em texto(falta download pdf na pasta downloads), feito diario em audio só criando o audio e gravando no banco de dados

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ufscar.app_mental">
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
    <application
         android:label="App Mental"
         android:icon="@mipmap/launcher_icon">
