--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,11 @@ dependencies:
   intl: ^0.17.0
   url_launcher: ^6.0.12
   package_info_plus: ^1.3.0
+  sqflite: ^2.2.4+1
+  pdf: ^3.8.4
+  flutter_sound: ^9.2.13
+  audioplayers: ^3.0.1
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
