--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: App Mental
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -23,7 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -56,10 +55,13 @@ dependencies:
   flutter_dotenv: ^5.0.2
   crypto: ^3.0.2
   auto_size_text: ^3.0.0
+  flutter_local_notifications: ^8.2.0
+  rxdart: ^0.27.7
+  flutter_native_timezone: ^2.0.0
+  timezone: ^0.8.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 flutter_icons:
   android: "launcher_icon"
@@ -73,7 +75,6 @@ flutter_icons:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -94,7 +95,6 @@ flutter:
     - assets/text/PICS/
     - assets/text/StressMgt/
     - lib/.env
-
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
