--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_html: ^3.0.0-alpha.6
   carousel_slider: ^4.2.1
   fl_chart: ^0.62.0
+  flutter_html_table: ^3.0.0-alpha.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
